# AlcAppTauri

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  package.json
.github/workflows/: bazel-probe.yml  ci.yml  dev-release.yml  tag-release.yml
crates/alc-config/: BUILD.bazel  Cargo.toml
crates/alc-config/src/: lib.rs
crates/alc-config/tests/: retry_scenarios.rs  url_scenarios.rs
plan/: 00-tauri-windows-migration.md  07-auto-update.md
src-tauri/: BUILD.bazel  Cargo.toml  MODULE.bazel  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  logws.rs  main.rs
