module(
    name = "alc_app_tauri",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.69.0")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

# workspace root は repo root。Cargo.toml / Cargo.lock は src-tauri 配下。
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//src-tauri:Cargo.lock",
    manifests = ["//src-tauri:Cargo.toml"],
)

use_repo(crate, "crates")
