[package]
name = "alc-app-tauri"
version = "0.1.0"
description = "AlcApp — Windows (Tauri) kiosk shell for alc-app"
edition = "2021"

[lib]
name = "alc_app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "alc-app-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alc-config = { path = "../crates/alc-config" }
