[package]
name = "alc-app-tauri"
version = "0.1.0"
description = "AlcApp — Windows (Tauri) kiosk shell for alc-app"
edition = "2021"

[lib]
name = "alc_app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "alc-app-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alc-config = { path = "../crates/alc-config" }
# dev WebSocket ログサーバー (127.0.0.1 のみ)。tray 常駐と実機 (WebView2) の
# 挙動を外から見るための開発支援。詳細は src/logws.rs 参照。
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# 起動時に GitHub Release を polling して updater が新版を install する。
# 署名鍵は user が secret-inject で TAURI_SIGNING_PRIVATE_KEY / _PASSWORD に投入。
tauri-plugin-updater = "2"
# ローカルログを tray メニューからクリップボードに出すため。tauri-plugin より
# 依存が薄い (Windows は SetClipboardData 直呼び) ので arboard を使う。
arboard = "3"
